quick fix for the alignment

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -6,6 +6,7 @@ $font: -apple-system, "Avenir Next", "Segoe UI", Roboto, Helvetica, Arial, sans-
 $primary-text-color: #000000;
 $tugut-green: #4fde93;
 $side-margin: 90px;
+$tugut-logo-top-margin: 10px;
 
 html {
 	font-size: 62.5%;
