--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -105,14 +105,14 @@ header {
 
 .text-logo {
 	padding: 0 10px 0 10px;
-	margin-top: 6px;
+	margin-top: $tugut-logo-top-margin;
 	height: 35px;
 	filter: drop-shadow(0px 5px 10px rgba(0,0,0,0.1)) drop-shadow(0px 1px 1px rgba(0,0,0,0.2))
 }
 
 .text-logo-left {
 	padding: 0 10px 0 0;
-	margin-top: 6px;
+	margin-top: $tugut-logo-top-margin;
 	height: 35px;
 	filter: drop-shadow(0px 5px 10px rgba(0,0,0,0.1)) drop-shadow(0px 1px 1px rgba(0,0,0,0.2))
 }
@@ -120,6 +120,7 @@ header {
 #what-is {
 	margin-bottom: 25px;
 	display: flex;
+	align-items: center;
 	font-size: 4rem;
 	font-weight: bold;
 }
